...
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:id="@+id/activity_post_view">


...

            <Button
                android:id="@+id/mapButton"
                android:layout_width="50dp"
                android:layout_height="60dp"
...
                app:cornerRadius="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/messagesButton"
                app:layout_constraintStart_toEndOf="@+id/homeButton"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/createPostButton"
                android:layout_width="50dp"
                android:layout_height="60dp"
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/homeButton"
                app:layout_constraintStart_toEndOf="@+id/accountButton"
                app:layout_constraintTop_toTopOf="parent" />

...

    <TextView
        android:id="@+id/titleDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="title"
        android:textSize="35dp"
        tools:layout_editor_absoluteX="199dp"
...

    <TextView
        android:id="@+id/locationDisplay"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_marginTop="112dp"
        android:text="location"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
...

    <TextView
        android:id="@+id/notesDisplay"
        android:layout_width="184dp"
        android:layout_height="229dp"
...

    <EditText
        android:id="@+id/changeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/changeLocation"
        android:layout_width="340dp"
        android:layout_height="49dp"
...

    <EditText
        android:id="@+id/changeNotes"
        android:layout_width="182dp"
        android:layout_height="255dp"
...

    <Button
        android:id="@+id/changeDetailsBtn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
...

    <Button
        android:id="@+id/deletePostBtn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
...

    <Button
        android:id="@+id/confirmChanDtlBtn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
...

    <Button
        android:id="@+id/cancelChanDtlBtn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
...

    <ListView
        android:id="@+id/commentList"
        android:layout_width="391dp"
        android:layout_height="95dp"
...

    <Button
        android:id="@+id/commentBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
...

    <Button
        android:id="@+id/cancelCmtBtn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
...

    <Button
        android:id="@+id/confirmCmtBtn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
...

    <EditText
        android:id="@+id/commentText"
        android:layout_width="364dp"
        android:layout_height="229dp"
...
