<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_createpost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".CreatePostActivity"
    >

...
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="252dp"
        android:backgroundTint="?attr/colorSecondary"
        android:text="Discard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note" />

    <Button
        android:id="@+id/submit"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="72dp"
        android:backgroundTint="?attr/colorSecondary"
        android:text="Submit"
...
    <!--        app:layout_constraintTop_toBottomOf="@id/note"-->
    <!--        android:layout_marginTop="20dp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"/>-->

    <CheckBox
        android:id="@+id/lostCB"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="176dp"
        app:layout_constraintStart_toStartOf="@id/note"
        app:layout_constraintTop_toBottomOf="@id/note" />

    <CheckBox
        android:id="@+id/foundCB"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/lostCB"
        app:layout_constraintTop_toBottomOf="@id/lostCB"

...
